--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
+
+body {
+  background-color: black;
+  font-family: "Ubuntu", Verdana, Geneva, Tahoma, sans-serif;
+  color: white;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+}
